# smteepee-rs

./: .gitignore  Cargo.toml  settings.toml
src/: commands.rs  config.rs  dummy_socket.rs  main.rs  message.rs  responses.rs  settings.rs  smtp.rs
src/tests/: tests
