[package]
name = "smteepee"
version = "0.1.0"
authors = ["wakka <fungus.humungus@gmail.com>"]
edition = "2018"

[dependencies]
tokio = { version = "0.2", features = ["full"] }
tokio-util = { version = "0.3", features = ["codec"] }
futures = "0.3"
regex = "1.1"
lazy_static = "1.3"
serde = "1.0"
serde_derive = "1.0"
toml = "0.5"
base64 = "0.10"

[dev-dependencies]
tokio-test = "0.2"